# AAWG

./: GlobalData.hs  Makefile  Net.hs  Server.hs  TargetCalculator.hs  net.hs  server.hs  synthetic_cam.py  synthetic_turret.py
net/: CMakeLists.txt  install.sh  ssd.cpp
net/include/: Frame.h  Net.h
net/src/: Net.cpp  toolkit.cpp  toolkit.h
